--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "react": "^16.0.0",
-    "react-dom": "^16.8.2"
+    "react-dom": "^16.8.2",
+    "uuid": "^3.3.2"
   }
 }
