--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-onboarding",
+  "name": "@reactive-labs/onboarding",
   "version": "0.0.1-alpha.0",
   "description": "Onboarding library for React",
   "main": "dist/index.js",
