Added more info at package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@reactive-labs/onboarding",
   "version": "0.0.1-alpha.0",
   "description": "Onboarding library for React",
-  "main": "dist/index.js",
+  "main": "dist/react-onboarding.js",
+  "module": "dist/react-onboarding.module.js",
+  "browser": "dist/react-onboarding.umd.js",
   "repository": "https://github.com/alexvcasillas/react-onboarding.git",
   "author": "Alex Casillas <@alexvcasillas>",
   "license": "MIT",
