--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@reactive-labs/onboarding",
-  "version": "0.0.1-alpha.3",
+  "version": "0.0.1-alpha.8",
   "description": "Onboarding library for React",
   "main": "dist/react-onboarding.js",
+  "browser": "dist/react-onboarding.umd.js",
   "module": "dist/react-onboarding.module.js",
   "repository": "https://github.com/alexvcasillas/react-onboarding.git",
   "author": "Alex Casillas <alexvcasillas@gmail.com> (https://alexvcasillas.com)",
@@ -15,18 +16,22 @@
   },
   "peerDependencies": {
     "prop-types": "^15.7.2",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2"
+    "react": "^16.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
     "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
     "parcel": "^1.11.0",
     "rollup": "^1.2.2",
     "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-filesize": "^6.0.1",
+    "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-terser": "^4.0.4"
   },
