--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reactive-labs/onboarding",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Onboarding library for React",
   "main": "dist/react-onboarding.js",
   "umd:main": "dist/react-onboarding.umd.js",
@@ -9,14 +9,19 @@
   "author": "Alex Casillas <alexvcasillas@gmail.com> (https://alexvcasillas.com)",
   "license": "MIT",
   "scripts": {
-    "build": "microbundle --jsx react",
-    "dev": "microbundle watch --jsx react"
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "lint": "tsc"
   },
   "dependencies": {
-    "react": "^16.8.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.0",
     "@types/react": "^16.8.7",
+    "prettier": "^2.8.3",
+    "tsup": "^6.5.0",
     "typescript": "^4.9.4"
   }
 }
